--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="header">
-		<a href="index.html" id="logo"><img src="images/logo.jpg" alt="LOGO" /></a>
+		<a href="index.html" id="logo"><img src="images/Finance Solution.png" alt="LOGO" /></a>
 		<div id="navigation">
 			<ul>
 				<li class="first selected"><a href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
 				<li><a href="services.html">Services</a></li>
 				<li><a href="solutions.html">Solutions</a></li>
 				<li><a href="support.html">Support</a></li>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a href="importance.html">Importance</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
