--- a/support.html
+++ b/support.html
@@ -20,7 +20,7 @@
 				<li><a href="services.html">Services</a></li>
 				<li><a href="solutions.html">Solutions</a></li>
 				<li class="selected"><a href="support.html">Support</a></li>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a href="importance.html">Importance</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
