Change paragraph of index.html

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			<div class="details">
 				<p>
 					<span>
-						This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.
+						FINANCIAL SOLUTION
 					</span>
-					You can remove any link to our website from this website template, you're free to use this website template without linking back to us.
+					Financial Solutions Group is an independent financial advisory firm offering comprehensive financial planning and investment management services as well as strategic planning for situational events and unexpected challenges.
 				</p>
 			</div>
 		</div>
@@ -52,22 +52,19 @@
 				<li class="selected">
 					<a href="index.html"><img src="images/meeting2.jpg" alt="Img" /></a>
 					<p>
-						<a href="index.html">Morbi quiseros sedquam interdum placerat</a><br/>
-						Fusce placerat tellusdiam rutrum porttitor
+						<a href="index.html">Employee Benefits Planning</a><br/>
 					</p>
 				</li>
 				<li>
 					<a href="index.html"><img src="images/flags2.jpg" alt="Img" /></a>
 					<p>
-						<a href="index.html">Ut posuere nibh in tortor</a><br/>
-						Phasellusposuere semper loremsodales orci fringilla eget.
+						<a href="index.html">Business Succession Planning</a><br/>
 					</p>
 				</li>
 				<li>
 					<a href="index.html"><img src="images/boys.jpg" alt="Img" /></a>
 					<p>
-						<a href="index.html">In sagittis lacus mollis nunc</a><br/>
-						malesuada et facilisisipsum scelerisque
+						<a href="index.html">Establishing a Compensation Plan</a><br/>
 					</p>
 				</li>
 			</ul>
@@ -77,64 +74,55 @@
 	<div id="contents">
 		<div class="body">
 			<div id="sidebar">
-				<h3>Blog</h3>
+				<h3>Importance</h3>
 				<ul>
 					<li>
-						Quisque iaculis erat in velit fermentum pellentesque. 
-						<span>Sept. 21 | by Nullam <a href="blog.html">8</a></span>
+						Want to better manage your finances, but aren’t sure where to start – Consult a professional if you think that so much is a lot for you to handle. Don’t feel shy in asking for help ever.
+						<span></span>
 					</li>
 					<li>
-						Semper. Cras eu elit velit. Nullam vel eros turpis.
-						<span>Sept. 21 | by Nullam <a href="blog.html">8</a></span>
+						Don’t have time to do your own financial planning – Some things are best left to professionals.
+						<span></span>
 					</li>
 					<li>
-						Aenean id erat elit, quis venenatis erat. 
-						Cras ornare orci vitae metus 
-						<span>Sept. 21 | by Nullam <a href="blog.html">8</a></span>
+						Want a professional opinion about the plan you’ve developed – Being safe is always better than being sorry in the long run.
+						<span></span>
 					</li>
 					<li>
-						Vivamus euismod dictum purus ac semper. 
-						Etiam sed elit id ante commodo
-						<span>Sept. 21 | by Nullam <a href="blog.html">8</a></span>
-					</li>
-					<li>
-						Fusce ac quam nibh, at pharetra dolor. 
-						In quis odio arcu, vel laoreet eros. 
-						Nam vel sem dui. 
-						<span>Sept. 21 | by Nullam <a href="blog.html">8</a></span>
+						Life is uncertain so one should be prepared for everything in advance. Planning ahead never hurts.
+						<span></span>
 					</li>
 				</ul>
 			</div>
 			<div id="main">
-				<span>This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text.</span>
+				<span>WHAT ARE YOU SEARCHING FOR?</span>
 				<ul>
 					<li>
-						<a href=""><img src="images/globe.jpg" alt="Img" /><h3>Lorem ipsum dolor sit amet</h3></a>
-						<p>Donec venenatis, mauris in blandit tempor, sem tellus vehicula lorem</p>
+						<a href=""><img src="images/globe.jpg" alt="Img" /><h3>Financial planning for my business</h3></a>
+						<p>Transform your business savvy into investment savvy.</p>
 					</li>
 					<li>
-						<a href=""><img src="images/tools.jpg" alt="Img" /><h3>Proin condiment porttitor ultrices</h3></a>
-						<p>Cras tristique faucibus sagittis. Praesent pulvinar, dolor in posuere vulputate</p>
+						<a href=""><img src="images/tools.jpg" alt="Img" /><h3>A coordinated financial plan</h3></a>
+						<p>Experience our custom-tailored, comprehensive process.</p>
 					</li>
 					<li>
-						<a href=""><img src="images/check.jpg" alt="Img" /><h3>Quisque consequat</h3></a>
-						<p>Sed vitae massa at turpis mollis aliquam sed vitae tellus integer arcu</p>
+						<a href=""><img src="images/check.jpg" alt="Img" /><h3>Independent financial advice</h3></a>
+						<p>Navigate your life-changing transitions with confidence.</p>
 					</li>
 					<li>
-						<a href=""><img src="images/graph.jpg" alt="Img" /><h3>Class aptent taciti sociosqu</h3></a>
-						<p>Nam quis arcu erat ultricies volutpat leo, in molestie est laoreet eu</p>
+						<a href=""><img src="images/graph.jpg" alt="Img" /><h3>A risk-appropriate investment strategy</h3></a>
+						<p>Learn about our integrated investment approach.</p>
 					</li>
 				</ul>
-				<p>If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forum/">Forum</a>.</p>
 			</div>
 		</div>
 	</div> <!-- /#contents -->
 	<div id="footer">
 		<ul class="contacts">
 			<h3>Contact Us</h3>
-			<li><span>Email</span><p>: company@email.com</p></li>
-			<li><span>Address</span><p>: 189 Lorem Ipsum Pellentesque, Mauris Etiam ut velit odio Proin id nisi enim 0000</p></li>
-			<li><span>Phone</span><p>: 117-683-9187-000</p></li>
+			<li><span>Email</span><p>: financialsolution01@gmail.com</p></li>
+			<li><span>Address</span><p>: Sorsogon City</p></li>
+			<li><span>Phone</span><p>: 09345267890</p></li>
 		</ul>
 		<ul id="connect">
 			<h3>Get Updated</h3>
@@ -144,7 +132,7 @@
 		</ul>
 		<div id="newsletter">
 			<p><b>Sign-up for Newsletter</b>
-				In sollicitudin vulputate metus, sed commodo diam elementum nec. Sed et risus sed magna convallis adipiscing.
+				Sign up for our guide to navigating loneliness and finding connections.
 			</p>
 			<form action="" method="">
 				<input type="text" value="Name" class="txtfield" onblur="javascript:if(this.value==''){this.value=this.defaultValue;}" onfocus="javascript:if(this.value==this.defaultValue){this.value='';}" />
@@ -152,7 +140,7 @@
 				<input type="submit" value="" class="button" />
 			</form>
 		</div>
-		<span class="footnote">&copy; Copyright &copy; 2011. All rights reserved</span>
+		<span class="footnote">&copy; Copyright &copy; 2022. All rights reserved</span>
 	</div> <!-- /#footer -->
 </body>
 </html>
