Change paragraph in about.html

--- a/about.html
+++ b/about.html
@@ -33,30 +33,18 @@
 	</div> <!-- /#header -->
 	<div id="contents">
 		<div class="background">
-			<h3>We Have Free Templates for Everyone</h3>
+			<h3>Why Financial Solution?</h3>
 			<p>
-				Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What&acute;s more, they&acute;re
-				absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with
-				the <a href="http://www.freewebsitetemplates.com/about/termsofuse/">Terms of Use</a>. You can even remove all our links if you want to.
+				Financial Solution is an independent financial advisory firm offering comprehensive financial planning and investment management services as well as strategic planning for situational events and unexpected challenges. As a fiduciary service provider, we are representing you and must put your interests foremost, when applicable. As an independent firm, we have an unlimited toolbox of options to choose from for our investments and planning solutions and do not report to corporate shareholders, product salesmen or anyone other than you—our client.
 			</p>
 
-			<h3>We Have More Templates for You</h3>
+			
 			<p>
-				Looking for more templates? Just browse through all our <a href="http://www.freewebsitetemplates.com/">Free Website	Templates</a> and find what you&acute;re looking for. But if you don&acute;t find any
-				website template you can use, you can try our <a href="http://www.freewebsitetemplates.com/freewebdesign/">Free Web Design</a> service and tell us all about it. Maybe you&acute;re looking for something different,
-				something special. And we love the challenge of doing something	different and something special.
+				Through an array of step-by-step processes, we offer custom-tailored solutions designed to simplify financial planning and investing, empowering you to make informed financial decisions. With a forward-thinking perspective, we work to create plans that not only help meet today’s financial objectives but also to anticipate and proactively address future and ongoing planning considerations. We maintain a global outlook with our asset management services and provide an integrated investment approach that considers a broad universe of investment options; we provide an ongoing, integrated investment approach incorporating both quantitative and qualitative data to design and manage investment portfolios to help meet your long-term objectives. 
 			</p>
 
-			<h3>Be Part of Our Community</h3>
-			<p>If you&acute;re experiencing issues and concerns about this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forum/">on our forum</a> and meet other people in the community who share the same interests with you.</p>
-
-			<p>
-				<b>Template details</b>
-				Version 5<br/><br/>
-				Website Template details, discussion and updates for this <a href="http://www.freewebsitetemplates.com/forum/f18/business-solutions-website-template-18773">Business Solutions Template</a>.<br/><br/>
-				Website Template design by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>.<br/><br/>
-				Please feel free to remove some or all the text and links of this page and replace it with your own About content.<br/><br/>
-			</p>
+			<p>By leveraging technology and best practices, we provide a high-touch, high-tech experience with efficiency, accessibility, proactive planning and purposeful communication to enhance your experience throughout the financial planning process. 
+			<p>Ultimately, Financial Services Group exists to provide financial solutions that help simplify a complex world.</p>
 		</div>
 	</div> <!-- /#contents -->
 	<div id="footer">
