--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
 	<div id="footer">
 		<ul class="contacts">
 			<h3>Contact Us</h3>
-			<li><span>Email</span><p>: company@email.com</p></li>
-			<li><span>Address</span><p>: 189 Lorem Ipsum Pellentesque, Mauris Etiam ut velit odio Proin id nisi enim 0000</p></li>
-			<li><span>Phone</span><p>: 117-683-9187-000</p></li>
+			<li><span>Email</span><p>: financialsolution01@gmail.com</p></li>
+			<li><span>Address</span><p>: Sorsogon City</p></li>
+			<li><span>Phone</span><p>: 09345267890</p></li>
 		</ul>
 		<ul id="connect">
 			<h3>Get Updated</h3>
@@ -62,7 +62,7 @@
 		</ul>
 		<div id="newsletter">
 			<p><b>Sign-up for Newsletter</b>
-				In sollicitudin vulputate metus, sed commodo diam elementum nec. Sed et risus sed magna convallis adipiscing.
+				Sign up for our guide to navigating loneliness and finding connections.
 			</p>
 			<form action="" method="">
 				<input type="text" value="Name" class="txtfield" onblur="javascript:if(this.value==''){this.value=this.defaultValue;}" onfocus="javascript:if(this.value==this.defaultValue){this.value='';}" />
@@ -70,7 +70,7 @@
 				<input type="submit" value="" class="button" />
 			</form>
 		</div>
-		<span class="footnote">&copy; Copyright &copy; 2011. All rights reserved</span>
+		<span class="footnote">&copy; Copyright &copy; 2022. All rights reserved</span>
 	</div> <!-- /#footer -->
 </body>
 </html>
