Change paragraph and footer

--- a/support.html
+++ b/support.html
@@ -18,7 +18,6 @@
 				<li class="first"><a href="index.html">Home</a></li>
 				<li><a href="about.html">About us</a></li>
 				<li><a href="services.html">Services</a></li>
-				<li><a href="solutions.html">Solutions</a></li>
 				<li class="selected"><a href="support.html">Support</a></li>
 				<li><a href="importance.html">Importance</a></li>
 				<li><a href="contact.html">Contact</a></li>
@@ -34,44 +33,42 @@
 	<div id="contents">
 		<div class="background">
 			<div id="support">
-				<span>Looking for more templates? Just browse through all our <a href="http://www.freewebsitetemplates.com/">Free Website	Templates</a> and find what you&acute;re looking for.</span>
+				<span>INTEGRATED INVESTMENT APPROACH</span>
 				<p>
-					But if you don&acute;t find any
-					website template you can use, you can try our <a href="http://www.freewebsitetemplates.com/freewebdesign/">Free Web Design</a> service and tell us all about it. Maybe you&acute;re looking for something different,
-					something special. And we love the challenge of doing something	different and something special.
+					Financial Solution is committed to an integrated investment approach that incorporates both quantitative and qualitative data to design and manage your investment portfolios. 
 				</p>
 				<ul>
 					<li>
 						<img src="images/globe2.jpg" alt="SupportImg" />
 						<p>
-							<b>Nulla ut metus nulla. Proin vulputate tristique feugiat</b>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut turpis vitae purus cursus malesuada at sed lacus. Integer pretium luctus felis, a dictum dui malesuada in. Praesent nunc erat, mollis 
-							sed varius id, blandit ut nisi. Aliquam in ipsum purus, in dignissim turpis. Nullam a adipiscing felis.
+							<b>Financial planning for my business</b>
+							Transform your business savvy into investment savvy.
 						</p>
+						<p>As a business owner, it can be difficult to invest strategically for the future as you must deal with the day-to-day of running your business; sometimes, delegation to a professional is the most effective way to be successful and maximize your valuable time. </p>
 					</li>
 					<li>
 						<img src="images/tools2.jpg" alt="SupportImg" />
 						<p>
-							<b>Please feel free to remove some or all the text and links of this page and replace it with your own About content.</b>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut turpis vitae purus cursus malesuada at sed lacus. Integer pretium luctus felis, a dictum dui malesuada in. Praesent nunc erat, mollis 
-							sed varius id, blandit ut nisi. Aliquam in ipsum purus, in dignissim turpis.
+							<b>A coordinated financial plan</b>
+							Experience our custom-tailored, comprehensive process.
 						</p>
+						<p>Often financial professionals will use generic questionnaires or software programs to match up an investment portfolio based on your age. At Financial Solution, we believe age is just a number, and life is really a series of transitions and milestones that require a much more sophisticated and personal approach.</p>
 					</li>
 					<li>
 						<img src="images/check2.jpg" alt="SupportImg" />
 						<p>
-							<b>Nulla ut metus nulla. Proin vulputate tristique feugiat</b>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut turpis vitae purus cursus malesuada at sed lacus. Integer pretium luctus felis, a dictum dui malesuada in. Praesent nunc erat, mollis 
-							sed varius id, blandit ut nisi. Aliquam in ipsum purus, in dignissim turpis.
+							<b>Independent financial advice</b>
+							Navigate your life-changing transitions with confidence.
 						</p>
+						<p>By leveraging technology and best practices, we provide a high-touch, high-tech experience with efficiency, accessibility, proactive planning and purposeful communication to enhance your experience throughout the financial planning process. </p>
 					</li>
 					<li>
 						<img src="images/graph2.jpg" alt="SupportImg" />
 						<p>
-							<b>This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.</b>
-							You can remove any link to our website from this website template, you're free to use this website template without linking back to us.
-							If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forum/">Forum</a>.
+							<b>A risk-appropriate investment strategy</b>
+							Learn about our integrated investment approach.
 						</p>
+						<p>Through our signature Quality Portfolio Process, we integrate the art and science of investing to create an appropriate portfolio reflective of your needs and objectives:</p>
 					</li>
 				</ul>
 			</div>
@@ -80,9 +77,9 @@
 	<div id="footer">
 		<ul class="contacts">
 			<h3>Contact Us</h3>
-			<li><span>Email</span><p>: company@email.com</p></li>
-			<li><span>Address</span><p>: 189 Lorem Ipsum Pellentesque, Mauris Etiam ut velit odio Proin id nisi enim 0000</p></li>
-			<li><span>Phone</span><p>: 117-683-9187-000</p></li>
+			<li><span>Email</span><p>: financialsolution01@gmail.com</p></li>
+			<li><span>Address</span><p>: Sorsogon City</p></li>
+			<li><span>Phone</span><p>: 09345267890</p></li>
 		</ul>
 		<ul id="connect">
 			<h3>Get Updated</h3>
@@ -92,7 +89,7 @@
 		</ul>
 		<div id="newsletter">
 			<p><b>Sign-up for Newsletter</b>
-				In sollicitudin vulputate metus, sed commodo diam elementum nec. Sed et risus sed magna convallis adipiscing.
+				Sign up for our guide to navigating loneliness and finding connections.
 			</p>
 			<form action="" method="">
 				<input type="text" value="Name" class="txtfield" onblur="javascript:if(this.value==''){this.value=this.defaultValue;}" onfocus="javascript:if(this.value==this.defaultValue){this.value='';}" />
@@ -100,7 +97,7 @@
 				<input type="submit" value="" class="button" />
 			</form>
 		</div>
-		<span class="footnote">&copy; Copyright &copy; 2011. All rights reserved</span>
+		<span class="footnote">&copy; Copyright &copy; 2022. All rights reserved</span>
 	</div> <!-- /#footer -->
 </body>
 </html>
