--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="header">
-		<a href="index.html" id="logo"><img src="images/logo.jpg" alt="LOGO" /></a>
+		<a href="index.html" id="logo"><img src="images/Finance Solution.png" alt="LOGO" /></a>
 		<div id="navigation">
 			<ul>
 				<li class="first"><a href="index.html">Home</a></li>
